--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,5 +37,17 @@ body {
 				font-family: "PT Sans", sans-serif;
 			}
 		}
+
+		#completedList {
+			color: white;
+			padding: 0;
+			li{
+				font-size: 1.3em;
+				list-style: none;
+				text-align: start;
+				font-family: "PT Sans", sans-serif;
+				text-decoration: line-through;
+			}
+		}
 	}
 }
